<resources>
    <string name="app_name">NextGame</string>
    <string name="text_fragment_a">Esta é a fragment A da TAB A</string>
    <string name="text_fragment_b">Esta é a fragment B da TAB B</string>
    <string-array name="titles_tab">
        <item>Xbox One</item>
        <item>Playstation 4</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_nome">Nome</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_confirm_password">Confirme sua senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_cadastrar">Cadastrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="turn_on_flashlight">Ligar Flash</string>
    <string name="turn_off_flashlight">Desligar Flash</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_app_id">338901533369067</string>
    <string name="fb_login_protocol_scheme">fb338901533369067</string>
    <string name="title_activity_maps">Map</string>
    <string name="delete">DELETE</string>

</resources>